<resources>
    <string name="client_key"><!-- (client_key) client_key is mandatory --></string>
    <string name="api_server">https://petshopapi.000webhostapp.com/api</string>
<!--http://192.168.101.90/Petshop-API-PHP-Natif-main/api-->
    <string name="app_name">PetShop</string>
    <string name="login">login</string>
    <string name="sign_up">sign_up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="back">back</string>
    <string name="create_account">Create Account</string>

    <string name="nama_aplikasi_anda">Nama Aplikasi\nAnda</string>
    <string name="tag_line">tag_line perusahaan anda</string>
    <string name="full_name">Full Name</string>
    <string name="nomor_telephone">Nomor Telephone</string>

    <string name="peringatan">Mohon isi data dibawah, sesuai identitas anda</string>
    <string name="peringatan_penitipan">Mohon untuk mengisi data berikut dengan tepat</string>
    <string name="identitas">identitas</string>
</resources>